pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-auth-tls-secret-namespace-collision.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-tls-secret-namespace-collision-victim
  namespace: a
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "a/1-b"

spec:
  ingressClassName: nginx
  rules:
    - host: tls-option-collision-victim.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-tls-secret-namespace-collision-attacker
  namespace: a-3
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "a-3/b"

spec:
  ingressClassName: nginx
  rules:
    - host: tls-option-collision-attacker.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
